--- a/css/tis_main.css
+++ b/css/tis_main.css
@@ -5,9 +5,35 @@ body {
   min-height: 100vh;
 }
 
-.background {
+header {
+  height: 100px;
+  width: 100vw;
+  position: relative;
+}
+
+.sub_header {
+  width: 83%;
+  height: 70px;
+  margin-left: 8%;
+  margin-top: 15px;
+  background-color: #fff;
+  border-radius: 20px;
+}
+
+.background_header {
   background-image: url(../img/USA_Bridges_Brooklyn_Bridge_New_York_City_599955_1920x1200.jpg);
   background-size: cover;
+  background-position-y: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.background {
+  background-image: url(../img/USA_Bridges_Brooklyn_Bridge_New_York_City_599955_1920x1200.jpg);
   -webkit-filter: blur(5px);
   -ms-filter: blur(5px);
   filter: blur(5px);
@@ -23,6 +49,42 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(79, 79, 217, 0.4);
+}
+
+.card {
+  margin: auto auto;
+  width: 570px;
+  background-color: #fff;
+  border: solid rgba(32, 7, 114, 0.2);
+  border-width: 0 1px;
+  box-sizing: border-box;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-flow: column;
+  border-radius: 10px;
+}
+
+input[type=button] {
+  margin: 21px auto 28px auto;
+  width: 237px;
+  height: 50px;
+
+  background: #F0C700;
+  border-radius: 10px;
+
+  font-family: NATS, serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 50px;
+  align-content: center;
+
+  border: none;
+  color: #fff;
+
+  left: 50%;
+
+  display: block;
 }
 
 .form {
@@ -67,6 +129,16 @@ input[type=text] {
 
 input[type=button]:hover, a:hover {
   cursor: pointer;
+}
+
+.name {
+  width: 47%;
+  margin: 7px 5% 7px auto;
+}
+
+.surname {
+  width: 47%;
+  margin: 7px auto;
 }
 
 .info {
