--- a/css/tis_main.css
+++ b/css/tis_main.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body {
   display: flex;
   min-width: 100vw;
@@ -18,6 +18,48 @@ header {
   margin-top: 15px;
   background-color: #fff;
   border-radius: 20px;
+}
+
+.navigation {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  list-style: none;
+  width: 100%;
+  height: 100%;
+}
+
+.navigation li {
+  width: fit-content;
+  margin: 20px 0;
+  padding: 0 6%;
+  color: #676767;
+
+  font-family: 'Encode Sans', sans-serif;
+font-style: normal;
+font-weight: normal;
+}
+
+.navigation li:nth-child(2), .navigation li:nth-child(3) {
+  border-right: solid #979797 2px;
+}
+
+.navigation .nav_title {
+font-size: 48px;
+line-height: 60px;
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: .1rem;
+}
+
+.profile_icon {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 25%;
+  right: 2%;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .background_header {
