--- a/font/fonts.css
+++ b/font/fonts.css
@@ -16,3 +16,15 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* @font-face {
+  font-family: 'Encode Sans';
+  src: url(Encode\ Sans/EncodeSans-CondensedThin.eot);
+  src: url(Encode\ Sans/EncodeSans-CondensedThin.eot?#iefix) format('embedded-opentype'),
+      url(Encode\ Sans/EncodeSans-CondensedThin.woff) format('woff'),
+      url(Encode\ Sans/EncodeSans-CondensedThin.ttf) format('truetype'),
+      url(Encode\ Sans/EncodeSans-CondensedThin.svg#EncodeSans-CondensedThin) format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+} */
