--- a/css/tis_main.css
+++ b/css/tis_main.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body {
   display: flex;
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  flex-flow: column;
 }
 
 header {
@@ -194,4 +195,105 @@ input[type=button]:hover, a:hover {
   background-image: url(../img/Vector.svg);
   background-size: cover;
   margin: 20px 20px auto auto;
+}
+
+section {
+  width: 90%;
+  height: 80%;
+  margin: auto;
+  display: flex;
+}
+
+section .profile {
+  display: flex;
+  flex-flow: column;
+  width: 40%;
+  height: 100%;
+  margin: 0 20px;
+}
+
+section .name_surname {
+  margin: 25px auto;
+
+  font-family: Encode Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 30px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #000000;
+}
+
+section .profile_img {
+  width: 60%;
+  height:auto;
+  margin: 4px auto 24px auto;
+}
+
+section .info {
+  margin: 19px auto;
+  width: fit-content;
+
+  font-family: Encode Sans;
+font-style: normal;
+font-weight: normal;
+font-size: 24px;
+line-height: 30px;
+/* identical to box height */
+
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #373737;
+
+}
+
+section .divider {
+  height: 100%;
+  width: 0;
+  border: 1px solid rgba(151, 151, 151, 0.5);
+}
+
+section .essay {
+  display: flex;
+  flex-flow: column;
+  margin: 0 20px;
+}
+
+section .essay p {
+  width: 80%;
+  height: fit-content;
+  word-break: break-all;
+  text-align: center;
+}
+
+section .essay .essay_title {
+  font-family: Encode Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  align-items: center;
+  text-align: center;
+
+  color: #000000;
+
+  margin: 20px auto;
+}
+
+section .essay .essay_text {
+  font-family: Encode Sans;
+font-style: normal;
+font-weight: normal;
+font-size: 24px;
+align-items: center;
+text-align: center;
+
+color: #373737;
+
+  margin: 20px auto;
 }
